tests/cases/traits/errors/trait-duplicate-decl.ari
trait Show[T] {
  fn show(self) -> i64
}

trait Show[T] {
  fn show(self) -> i64
}

fn main() -> i64 {
  return 0;
}
